# VisionEdge-UAV

./: README.md  app.py  config.py  controller.py  detect_and_track.py  launch.py  pyproject.toml  requirements-python313.txt  requirements.txt  validate_setup.py
templates/: index.html
