[project]
name = "visionedge-uav"
version = "0.1.0"
description = "VisionEdge UAV Tracking System"
requires-python = ">=3.10"
dependencies = [
    "Flask>=2.3.0",
    "ultralytics>=8.0.0",
    "opencv-python-headless>=4.8.0",
    "deep-sort-realtime>=1.3.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scipy>=1.10.0"
]

[tool.uv.extra-build-dependencies]
airsim = ["numpy"]
